# hacktoberfest

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pancake.java
tools/console/getdirecturl_cli-by-arsa/: Cargo.toml  readme.md
tools/console/getdirecturl_cli-by-arsa/src/: main.rs  utils.rs
tools/console/getdirecturl_cli-by-arsa/src/handler/: auto.rs  manual.rs  mod.rs
tools/console/getdirecturl_cli-by-arsa/src/provider/: krakenfile.rs  meganz.rs  mod.rs  pixeldrain.rs
tools/console/kalkulator-by-hinamizawa/: readme.md
tools/console/unit_converter-by-rava/: README.md  converter.py
tools/cybersec/port-scanner-by-kachina/: readme.md
tools/others/todolist-by-sonata/: readme.md
tools/scrapers/kbbi-scraper-by-kanata/: readme.md
tools/web/mini-manager-by-kira/: README.md
