[package]
name = "getdirecturl"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
base64 = "0.22.1"
cbc = "0.1.2"
cipher = "0.4.4"
clap = { version = "4.5.48", features = ["derive"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3.1.2", features = ["json"] }
url = "2.5.7"
